[package]
name = "rockstr"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin_hashes = { version = "0.14.0", features = ["serde"] }
hex = { version = "0.4.3", features = ["serde"] }
itertools = "0.13.0"
secp256k1 = { version = "0.29.0", features = ["serde", "hashes", "global-context"] }
serde = { version = "1.0.203", features = ["derive", "rc"] }
serde_json = "1.0.120"
smallvec = {version = "1.13.2", features = ["serde"]}
axum = {version = "0.7.4", features=[ "ws" ] }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "fs"] }
log = "0.4.22"
anyhow = "1.0.86"
parking_lot = { version = "0.12.2", features = ["deadlock_detection"] }
env_logger = "0.11.3"
