[package]
name = "rockstr"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"
serde = { version = "1.0.203", features = ["derive", "rc"] }
serde_json = "1.0.120"
smallvec = {version = "1.13.2", features = ["serde"]}
axum = {version = "0.7.4", features=[ "ws" ] }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "fs", "process", "io-util"] }
log = "0.4.22"
anyhow = "1.0.86"
parking_lot = { version = "0.12.2", features = ["deadlock_detection"] }
env_logger = "0.11.3"
rustc-hash = "2.0.0"
rand = "0.8.5"
rocksdb = { version = "0.22.0", default-features = false, features = ["lz4"] }
ordered-float = { version = "4.0", default-features = false }
toml = "0.8.19"
lnostr = { path = "crates/lnostr" }
hex-conservative = "0.2.1"
cached = { version="0.53.1", default-features = false }
