[package]
name = "lnostr"
version = "0.1.0"
edition = "2021"

[dependencies]
secp256k1 = { version = "0.29.0", features = ["serde", "hashes", "global-context", "rand-std"] }
serde = { version = "1.0.203", features = ["derive", "rc"] }
serde_json = "1.0.120"
smallvec = {version = "1.13.2", features = ["serde"]}
bitcoin_hashes = { version = "0.14.0", features = ["serde"] }
rustc-hash = "2.0.0"
hex = { version = "0.4.3", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "nostr"
harness = false
